--- a/Modules/RLHF/2024.07.02_RIO.md
+++ b/Modules/RLHF/2024.07.02_RIO.md
@@ -32,7 +32,7 @@
 - 数据:
   - [GigaSpeech](../../Datasets/GigaSpeech.md) 
   - [LibriTTS](../../Datasets/2019.04.05_LibriTTS.md)
-  - [LibriSpeech](../../Datasets/LibriSpeech.md)
+  - [LibriSpeech](../../Datasets/2015.04.19_LibriSpeech.md)
 - 对比:
   - Backbone: [VoiceCraft](../../Models/Speech_LLM/2024.03.25_VoiceCraft.md)
   - RIO Framework + DPO
