--- a/Models/Diffusion/2024.06.27_DEX-TTS.md
+++ b/Models/Diffusion/2024.06.27_DEX-TTS.md
@@ -30,7 +30,7 @@
 - 引用: 49
 - 被引: ?
 - 数据:
-  - [VCTK](../../Datasets/VCTK.md)
+  - [VCTK](../../Datasets/2012.08.00_VCTK.md)
   - [ESD](../../Datasets/ESD.md)
 - 对比:
   - [MetaStyleSpeech](../../Models/_tmp/MetaStyleSpeech.md) + [HiFi-GAN](../../Models/TTS3_Vocoder/2020.10.12_HiFi-GAN.md)
@@ -492,7 +492,7 @@ $$
 > We improved diffusion-based TTS via overlapping patch strategy and conv-freq embedding, which enables the comprehensive utilization of DiT.
 > To investigate the improvements in our diffusion network, we conduct experiments for general TTS which does not use reference speech.
 > We eliminate the modules dependent on reference (See Section \ref{sec:appendix-GeDEX-TTS} for details), thus the model can operate as general TTS and we call this version ***General DEX-TTS (GeDEX-TTS)***.
-> For comparison, we select previous diffusion-based TTS models and train models on a single-speaker dataset, [LJSpeech](../../Datasets/LJSpeech.md), following the set split of [Grad-TTS](../../Models/TTS2_Acoustic/2021.05.13_Grad-TTS.md).
+> For comparison, we select previous diffusion-based TTS models and train models on a single-speaker dataset, [LJSpeech](../../Datasets/2017.07.05_LJSpeech.md), following the set split of [Grad-TTS](../../Models/TTS2_Acoustic/2021.05.13_Grad-TTS.md).
 > FastSpeech2 is adopted for comparison since it is a popular baseline model in general TTS.
 > We consider 2000 epochs and $P$ of 4 for ***GeDEX-TTS*** and other training settings are the same as ***DEX-TTS***.
 > For inference, we use the NFE of 50 with Euler solver for all diffusion models.
