--- a/Models/E2E/2021.06.11_VITS.md
+++ b/Models/E2E/2021.06.11_VITS.md
@@ -33,8 +33,8 @@
 - 引用: 45
 - 被引: 610
 - 数据:
-  - [LJSpeech](../../Datasets/LJSpeech.md)
-  - [VCTK](../../Datasets/VCTK.md)
+  - [LJSpeech](../../Datasets/2017.07.05_LJSpeech.md)
+  - [VCTK](../../Datasets/2012.08.00_VCTK.md)
 - 对比
   - [Tacotron2](../../Models/TTS2_Acoustic/2017.12.16_Tacotron2.md) + [HiFi-GAN](../../Models/TTS3_Vocoder/2020.10.12_HiFi-GAN.md)
   - [Glow-TTS](../../Models/TTS2_Acoustic/2020.05.22_Glow-TTS.md) + [HiFi-GAN](../../Models/TTS3_Vocoder/2020.10.12_HiFi-GAN.md)
@@ -53,7 +53,7 @@
 > Our method adopts variational inference augmented with normalizing flows and an adversarial training process, which improves the expressive power of generative modeling.
 > We also propose a stochastic duration predictor to synthesize speech with diverse rhythms from input text.
 > With the uncertainty modeling over latent variables and the stochastic duration predictor, our method expresses the natural one-to-many relationship in which a text input can be spoken in multiple ways with different pitches and rhythms.
-> A subjective human evaluation ([Mean Opinion Score, or MOS](../../Evaluations/MOS.md)) on the [LJ Speech](../../Datasets/LJSpeech.md), a single speaker dataset, shows that our method outperforms the best publicly available TTS systems and achieves a MOS com parable to ground truth.
+> A subjective human evaluation ([Mean Opinion Score, or MOS](../../Evaluations/MOS.md)) on the [LJ Speech](../../Datasets/2017.07.05_LJSpeech.md), a single speaker dataset, shows that our method outperforms the best publicly available TTS systems and achieves a MOS com parable to ground truth.
 
 </details>
 <br>
@@ -1178,11 +1178,11 @@ class StochasticDurationPredictor(nn.Module):
 <summary>原文</summary>
 
 > We conducted experiments on two different datasets.
-> We used the [LJ Speech dataset](../../Datasets/LJSpeech.md) for comparison with other publicly available models and the [VCTK dataset](../../Datasets/VCTK.md) to verify whether our model can learn and express diverse speech characteristics.
-> The [LJ Speech dataset](../../Datasets/LJSpeech.md) consists of 13,100 short audio clips of a single speaker with a total length of approximately 24 hours.
+> We used the [LJ Speech dataset](../../Datasets/2017.07.05_LJSpeech.md) for comparison with other publicly available models and the [VCTK dataset](../../Datasets/2012.08.00_VCTK.md) to verify whether our model can learn and express diverse speech characteristics.
+> The [LJ Speech dataset](../../Datasets/2017.07.05_LJSpeech.md) consists of 13,100 short audio clips of a single speaker with a total length of approximately 24 hours.
 > The audio format is 16-bit PCM with a sample rate of 22 kHz, and we used it without any manipulation.
 > We randomly split the dataset into a training set (12,500 samples), validation set (100 samples), and test set (500 samples).
-> The [VCTK dataset](../../Datasets/VCTK.md) consists of approximately 44,000 short audio clips uttered by 109 native English speakers with various accents.
+> The [VCTK dataset](../../Datasets/2012.08.00_VCTK.md) consists of approximately 44,000 short audio clips uttered by 109 native English speakers with various accents.
 > The total length of the audio clips is approximately 44 hours.
 > The audio format is 16-bit PCM with a sample rate of 44 kHz.
 > We reduced the sample rate to 22 kHz.
@@ -1192,13 +1192,13 @@ class StochasticDurationPredictor(nn.Module):
 <br>
 
 我们在两个不同的数据集上进行了实验.
-我们使用 [LJ Speech 数据集](../../Datasets/LJSpeech.md) 用于和其他开源模型进行对比, 然后用 [VCTK 数据集](../../Datasets/VCTK.md) 验证模型是否可以学习和表达多样化的语音特征.
+我们使用 [LJ Speech 数据集](../../Datasets/2017.07.05_LJSpeech.md) 用于和其他开源模型进行对比, 然后用 [VCTK 数据集](../../Datasets/2012.08.00_VCTK.md) 验证模型是否可以学习和表达多样化的语音特征.
 
-[LJ Speech 数据集](../../Datasets/LJSpeech.md) 由单个说话人的 13,100 短音频片段组成, 总时长约为 24 小时.
+[LJ Speech 数据集](../../Datasets/2017.07.05_LJSpeech.md) 由单个说话人的 13,100 短音频片段组成, 总时长约为 24 小时.
 音频格式为 16 位 PCM, 采样率为 22 kHz, 我们没有对其进行任何处理.
 我们随机将数据集分为训练集 (12,500 个样本), 验证集 (100 个样本), 和测试集 (500 个样本).
 
-[VCTK 数据集](../../Datasets/VCTK.md) 由 109 名英语母语发言人发出的约 44,000 短音频片段组成, 总时长约为 44 小时.
+[VCTK 数据集](../../Datasets/2012.08.00_VCTK.md) 由 109 名英语母语发言人发出的约 44,000 短音频片段组成, 总时长约为 44 小时.
 音频格式为 16 位 PCM, 采样率为 44 kHz.
 我们将采样率降低到 22 kHz.
 我们随机将数据集分为训练集 (43,470 个样本), 验证集 (100 个样本), 和测试集 (500 个样本).
@@ -1295,7 +1295,7 @@ FFT 大小, 窗口大小和跳跃大小分别设置为 1024, 1024 和 256.
 本文中所有质量评估都采用了这种方式.
 表 01 显示了评估结果.
 
-> Tab.01.Comparison of evaluated MOS with 95% confidence intervals on the [LJ Speech dataset](../../Datasets/LJSpeech.md).
+> Tab.01.Comparison of evaluated MOS with 95% confidence intervals on the [LJ Speech dataset](../../Datasets/2017.07.05_LJSpeech.md).
 
 |Model|MOS (CI)|
 | --- | --- |
@@ -1364,7 +1364,7 @@ FFT 大小, 窗口大小和跳跃大小分别设置为 1024, 1024 和 256.
 <summary>原文</summary>
 
 > To verify that our model can learn and express diverse speech characteristics, we compared our model to [Tacotron2](../../Models/TTS2_Acoustic/2017.12.16_Tacotron2.md), [Glow-TTS](../../Models/TTS2_Acoustic/2020.05.22_Glow-TTS.md) and [HiFi-GAN](../../Models/TTS3_Vocoder/2020.10.12_HiFi-GAN.md), which showed the ability to extend to multi-speaker speech synthesis ([Transfer Learning from Speaker Verification to Multispeaker Text-To-Speech Synthesis](); [Glow-TTS (2020)](../../Models/TTS2_Acoustic/2020.05.22_Glow-TTS.md); [HiFi-GAN](../../Models/TTS3_Vocoder/2020.10.12_HiFi-GAN.md)).
-> We trained the models on the [VCTK dataset](../../Datasets/VCTK.md).
+> We trained the models on the [VCTK dataset](../../Datasets/2012.08.00_VCTK.md).
 > We added speaker embedding to our model as described in Section 2.5.
 > For [Tacotron2](../../Models/TTS2_Acoustic/2017.12.16_Tacotron2.md), we broadcasted speaker embedding and concatenated it with the encoder output, and for [Glow-TTS](../../Models/TTS2_Acoustic/2020.05.22_Glow-TTS.md), we applied the global conditioning following the previous work.
 > The evaluation method is the same as that described in Section 4.1.
@@ -1380,7 +1380,7 @@ FFT 大小, 窗口大小和跳跃大小分别设置为 1024, 1024 和 256.
 评估方法与第 4.1 节中描述的相同.
 如表 3 所示, 我们的模型超过了其他模型.
 
-> Table 3.Comparison of evaluated MOS with 95% confidence intervals on the [VCTK dataset](../../Datasets/VCTK.md).
+> Table 3.Comparison of evaluated MOS with 95% confidence intervals on the [VCTK dataset](../../Datasets/2012.08.00_VCTK.md).
 
 |Model|MOS (CI)|
 | --- | --- |
@@ -1425,7 +1425,7 @@ FFT 大小, 窗口大小和跳跃大小分别设置为 1024, 1024 和 256.
 <summary>原文</summary>
 
 > We compared the synthesis speed of our model with a parallel two-stage TTS system, [Glow-TTS](../../Models/TTS2_Acoustic/2020.05.22_Glow-TTS.md) and [HiFi-GAN](../../Models/TTS3_Vocoder/2020.10.12_HiFi-GAN.md).
-> We measured the synchronized elapsed time over the entire process to generate raw waveforms from phoneme sequences with 100 sentences randomly selected from the test set of the [LJ Speech dataset](../../Datasets/LJSpeech.md).
+> We measured the synchronized elapsed time over the entire process to generate raw waveforms from phoneme sequences with 100 sentences randomly selected from the test set of the [LJ Speech dataset](../../Datasets/2017.07.05_LJSpeech.md).
 > We used a single NVIDIA V100 GPU with a batch size of 1.
 > The results are shown in Table 4.
 > Since our model does not require modules for generating predefined intermediate representations, its sampling efficiency and speed are greatly improved.
