--- a/Models/E2E/2024.06.30_FLY-TTS.md
+++ b/Models/E2E/2024.06.30_FLY-TTS.md
@@ -29,7 +29,7 @@
 - 引用: 34
 - 被引: ?
 - 数据:
-  - [LJSpeech](../../Datasets/LJSpeech.md)
+  - [LJSpeech](../../Datasets/2017.07.05_LJSpeech.md)
 - 对比:
   - 基于 [VITS](2021.06.11_VITS.md)
 - 复现:
@@ -68,7 +68,7 @@
 > By adjusting the number of groups, we can balance between model size and modeling capacity.
 > To mitigate the decline in synthesis quality caused by model compression, we introduce a large pre-trained [WavLM](../../Models/Speech_Representaion/2021.10.26_WavLM.md) model as a discriminator for adversarial training.
 > By leveraging self-supervised representation to furnish the generator with additional information, we aim to enhance the quality of synthesized speech.
-> Experiments on the [LJSpeech](../../Datasets/LJSpeech.md) dataset show that ***FLY-TTS*** achieves a real-time factor of 0.0139 on Intel Core i9 CPU, 8.8 times faster than the baseline system (0.1221), and the parameters are compressed by 1.6 times.
+> Experiments on the [LJSpeech](../../Datasets/2017.07.05_LJSpeech.md) dataset show that ***FLY-TTS*** achieves a real-time factor of 0.0139 on Intel Core i9 CPU, 8.8 times faster than the baseline system (0.1221), and the parameters are compressed by 1.6 times.
 
 ## 2.Related Works: 相关工作
 
@@ -80,7 +80,7 @@
 > Autoregressive TTS models (shen2018natural, [Tacotron](../../Models/TTS2_Acoustic/2017.03.29_Tacotron.md)) generate the next time-step output conditioned on previous frames, leading to large inference latency and robustness issues.
 > Recent researches have focused on non-autoregressive TTS models ([FastSpeech](../../Models/TTS2_Acoustic/2019.05.22_FastSpeech.md); [Glow-TTS](../../Models/TTS2_Acoustic/2020.05.22_Glow-TTS.md); [VITS](../../Models/E2E/2021.06.11_VITS.md); [NaturalSpeech](../../Models/E2E/2022.05.09_NaturalSpeech.md)), which generate mel-spectrograms or raw waveforms in parallel.
 > [FastSpeech](../../Models/TTS2_Acoustic/2019.05.22_FastSpeech.md) and [FastSpeech2](../../Models/TTS2_Acoustic/2020.06.08_FastSpeech2.md) parallelize the generation of mel-spectrograms by predicting the length of the mel-spectrograms with external alignment models or tools.
-> Glow-TTS \cite{glow-tts} combines flow models and dynamic programming to search for the most likely monotonic alignment between text and speech latent representations to achieve parallel TTS.
+> [Glow-TTS](../../Models/TTS2_Acoustic/2020.05.22_Glow-TTS.md) combines flow models and dynamic programming to search for the most likely monotonic alignment between text and speech latent representations to achieve parallel TTS.
 > To further enhance the quality of synthesized speech, [VITS](../E2E/2021.06.11_VITS.md) adopts variational inference with normalizing flows to generate raw waveforms.
 > The recently proposed [NaturalSpeech](../../Models/E2E/2022.05.09_NaturalSpeech.md) also uses a variational autoencoder (VAE) for end-to-end text-to-waveform generation, achieving human-level speech quality.
 > While these models have made notable advancements in synthesis quality, they typically suffer from inefficient inference, impeding their deployment in real-world scenarios.
@@ -199,7 +199,7 @@ $$
 
 ### Experimental setup
 
-> We evaluate ***FLY-TTS*** on [LJSpeech](../../Datasets/LJSpeech.md) dataset, which contains 13100 English audio clips and corresponding text transcripts.
+> We evaluate ***FLY-TTS*** on [LJSpeech](../../Datasets/2017.07.05_LJSpeech.md) dataset, which contains 13100 English audio clips and corresponding text transcripts.
 > The dataset has a total length of about 24 hours, and each audio file is a single-channel 16-bit PCM WAV with a sample rate of 22050 Hz.
 > Following the setup of \cite{mb-istft-vits}, the dataset is randomly divided into 12500 training samples, 100 validation samples, and 500 test samples.
 
