--- a/Models/Speech_Neural_Codec/2021.07.07_SoundStream.md
+++ b/Models/Speech_Neural_Codec/2021.07.07_SoundStream.md
@@ -635,7 +635,7 @@ $$
 > - one in which compression is followed by denoising (i.e., denoising is applied at the decoder side); 
 > - another one in which denoising is followed by compression (i.e., denoising is applied at the encoder side).
 
-> We evaluate the different models using the [VCTK dataset](../../Datasets/VCTK.md), which was neither used for training ***SoundStream*** nor SEANet.
+> We evaluate the different models using the [VCTK dataset](../../Datasets/2012.08.00_VCTK.md), which was neither used for training ***SoundStream*** nor SEANet.
 > The input samples are 2 s clips of noisy speech cropped to reduce periods of silence and resampled at 24 kHz.
 > For each of the four input signal-to-noise ratios (0 dB, 5 dB, 10 dB and 15 dB) and clean audio, we run inference on 1000 samples and compute ViSQOL scores.
 > As shown in Table IV, one single model trained for joint compression and enhancement achieves a level of quality that is almost on par with using two disjoint models.
