--- a/Models/Speech_LLM/2024.07.11_MELLE.md
+++ b/Models/Speech_LLM/2024.07.11_MELLE.md
@@ -82,9 +82,9 @@
 >
 > In this work, we propose a continuous mel-spectrogram\footnote{We leave the exploration of other continuous representations, such as VAE latent hidden states, for future research endeavors.} based autoregressive language model (called ***MELLE***) for text-to-speech synthesis, as illustrated in Figure \ref{fig:overview}. ***MELLE*** is a robust single-pass zero-shot TTS model which autoregressively predicts mel-spectrogram frames based on previous mel-spectrogram and text tokens, thereby avoiding the inherent flaws associated with sampling discrete codec codes. 
 > The mel-spectrogram is then converted into waveform utilizing an off-the-shelf vocoder. 
-> In response to the aforementioned challenges, we first substitute  cross-entropy loss with regression loss and introduce a spectrogram flux loss to promote variation of predicted mel-spectrograms and eliminate repetition issues.
+> In response to the aforementioned challenges, we first substitute cross-entropy loss with regression loss and introduce a spectrogram flux loss to promote variation of predicted mel-spectrograms and eliminate repetition issues.
 > Second, we design a latent sampling module, derived from variational inference, functions as a sequence sampling strategy thereby enhancing the diversity of the generated audio samples. 
-> As an option, by adjusting the reduction factor, ***MELLE*** can predict multiple frames at one step and accelerate inference, thereby further alleviating the robustness issues associated with long-sequence modeling and maintaining satisfactory performance.  
+> As an option, by adjusting the reduction factor, ***MELLE*** can predict multiple frames at one step and accelerate inference, thereby further alleviating the robustness issues associated with long-sequence modeling and maintaining satisfactory performance. 
 >
 > We conducted evaluations of our ***MELLE*** on both the large-scale 50K-hour Libriheavy \citep{kang2024libriheavy} training dataset and the relatively small 960-hour LibriSpeech \citep{panayotov2015librispeech} training dataset. 
 > Following recent works, we use LibriSpeech test-clean set for zero-shot TTS evaluation.
@@ -120,6 +120,140 @@
 > Different previous works, ***MELLE*** leverages continuous-valued tokens based autoregressive language modeling approach with variational inference for text-to-speech synthesis. 
 
 ## 3.Methodology: 方法
+
+### 3.1.Problem Formulation: Mel-Spectrogram Language modeling
+
+> This study regards zero-shot TTS as an autoregressive mel-spectrogram language modeling task. Instead of predicting highly-compressed neural codec codes like VALL-E and its variants, ~***MELLE*** directly predicts continuous mel-spectrograms which are then converted to waveforms with an off-the-shelf vocoder. Taking well-established mel-spectrogram as the training target, it strives to achieve higher fidelity and naturalness.
+>
+> Given an audio sample with byte-pair-encoded (BPE) text content $\bm{x} = [x_0, x_1, \ldots, x_{L-1}]$, 
+***MELLE*** is optimized to predict the mel-spectrogram $\bm{y} = [\bm{y}_0, \bm{y}_1, \ldots, \bm{y}_{T-1}]$ extracted from the corresponding audio. Specifically, at each autoregressive step, ***MELLE*** is expected to predict the next mel-spectrogram frame $\bm{y}_{t}$ conditioned on the text prompt $\bm{x}$ and the previous generated mel-spectrograms $\bm{y}_{<t}$, which is equivalent to maximizing the following distribution:
+>
+> $$
+> p(\bm{y} \mid \bm{x}; \theta) = \prod_{t=0}^{T-1} p(\bm{y}_t \mid \bm{y}_{<t}, \bm{x}; \theta)\tag{01}
+> $$
+>
+> where $\bm{y}_{<t}$ denotes $[\bm{y}_0, \bm{y}_1,..., \bm{y}_{t-1}]$ and $\theta$ represents the parameters of ***MELLE***. 
+>
+> Inspired by previous neural TTS models \citep{li2019transformertts}, we can also set a reduction factor $r$ (e.g., 2 or 4) to control the number of mel-spectrogram frames predicted at each decoding step, providing a balance between computational efficiency and the generation of high-quality speech. Formally, the original mel-spectrogram sequences $\bm{y}$ will be partitioned into $\bm{y}^r = [\bm{y}_{0:r}, \bm{y}_{r:2r}, ..., \bm{y}_{(T-r):T}]$ with reduction factor $r$, and the likelihood function can be expressed as follows:
+>
+> $$
+> p(\bm{y} \mid \bm{x}; \theta) = \prod_{t=0}^{T/r-1} p(\bm{y}_{t\cdot r:(t+1)\cdot r} \mid \bm{y}_{<t\cdot r}, \bm{x}; \theta)\tag{02}
+> $$
+>
+> During inference, ***MELLE*** executes zero-shot TTS tasks via prompting like VALL-E. Given the text content $\bm{x}$ for synthesis, text transcription $\tilde{\bm{x}}$ and mel-spectrogram $\tilde{\bm{y}}$ of speech prompt, the model is designed to generate the target mel-spectrogram $\bm{y}$ of the corresponding content while preserving the characteristics of the original speaker in prompt, with maximum likelihood probability as $\argmax_{\bm{y}} p(\bm{y}_{t\cdot r:(t+1)\cdot r} \mid [\tilde{\bm{x}}; \bm{x}; \tilde{\bm{y}}; \bm{y}_{<t\cdot r}]; \theta)$ at each step, where $[;]$ means concatenation operation and it backs to standard mode if $r=1$.
+
+### 3.2.Architecture
+
+> As illustrated in Figure \ref{fig:overview}, ***MELLE*** comprises the following main components: pre-nets that respectively convert text into sub-word tokens and extract mel-spectrograms from speech, before projecting them to the model dimension; an autoregressive (AR) Transformer decoder that serves as the language model; a latent sampling module that samples latent embedding from a predicted Gaussian distribution, and then projects it back to the spectrogram space; a stop prediction layer that determines the end of the speech and a convolutional post-net for spectrogram refinement, similar to the methods described in \citep{shen2018tacotron2, li2019transformertts}. Finally, a vocoder is used to recover the speech from generated mel-spectrogram. 
+>
+> Unlike neural codec language models that iteratively predict multi-layer codec codes, we do not require an additional non-autoregressive (NAR) model thanks to the completeness of the mel-spectrogram. This simplification significantly improve computational and storage efficiency. Moreover, by adjusting the reduction factor, ***MELLE*** can generate multiple mel-spectrogram frames at one step, further enhancing efficiency while still maintaining superior performance.
+
+#### 3.2.1.Autoregressive Language Model
+
+> We employ a unidirectional Transformer decoder as the language model (LM) to autoregressively generates acoustic continuous features based on the textual input and acoustic prompts. Specifically, input text tokens $\bm{x}$, with an appended <EOS> token, are first converted into embeddings by the text embedding layer based on their indices. 
+> Simultaneously, we employ a multi-layer perceptron, named pre-net, to project the mel-spectrogram $\bm{y}$ to the language model dimension.
+> The LM, consisting of blocks of multi-head attention and feed-forward layers, takes the concatenation of text and acoustic embeddings as input to model the dependency between semantic and acoustic information. The output of the LM $\bm{e}_t$ at time step $t$ is subsequently processed by the following modules of ***MELLE*** to synthesize the next-frame output, which is detailed in the following section.
+
+#### 3.2.2.Latent Sampling Module
+
+> Sampling strategy is an critical part in TTS systems, as it not only introduces diversity in the output, but also enhances the generalization ability of the model. 
+> For example, Tacotron-like models \citep{wang2017tacotron,shen2018tacotron2} enable dropout in their pre-net during inference to introduce variation;
+> Neural codec language models~\citep{wang2023valle, zhang2023vallex} adopt the top-p random sampling to avoid the collapse outputs leading by greedy search; Diffusion-based \citep{shen2024naturalspeech2,ju2024naturalspeech3} and flow-matching-based methods \citep{le2024voicebox} restore speech representations from the sampling of a simpler distribution. 
+>
+> In this study, inspired by variational autoencoders (VAEs) \citep{kingma2014vae, blei2017vi_review}, we integrate a novel latent sampling module within ***MELLE***, aimed at enhancing both expressive diversity and robustness, as shown in Figure \ref{fig:modules} (left). Based on $\bm{e}_t$, the output of the LM, this module predicts a distribution, from which a latent embedding $\bm{z}_t$ is sampled. %This latent embedding is then mapped to the mel-spectrogram space.
+>
+> Specifically, we assume that $\bm{z}_t$ follows a multivariate Gaussian distribution where each dimension is independent. As depicted in Figure \ref{fig:modules}, a linear layer ($\mathbf{W} [\cdot] + \mathbf{b}$) predicts a mean vector $\boldsymbol{\mu}_t$ and a log-magnitude variance vector $\log\bm{\sigma}_t^2$ of the multivariate Gaussian distribution based on $\bm{e}_t$.
+> Leveraging the reparameterization technique, a $\bm{z}_t$ is sampled as
+$$
+\begin{aligned}
+&\bm{z}_t = \bm{\mu}_t + \bm{\sigma}_t \odot \bm{\epsilon} \\ \text{where}\quad\bm{\epsilon} &\sim \mathcal{N}(0, \bm{I}), \quad  [\bm{\mu}_t, \log \bm{\sigma}_t^2] = \mathbf{W} \bm{e}_t + \mathbf{b}
+\end{aligned}
+$$
+
+> Therefore, the probability density function can be defined as
+> $$
+> \begin{aligned}
+> &p_\theta(\bm{z}_t \mid \bm{e}_t) = \mathcal{N}(\bm{z}_t \mid \bm{\mu}_t, \mathrm{diag}(\bm{\sigma}_t^2)) 
+\end{aligned}
+> $$
+>
+> Note that the latent sampling module is differentiable with the reparameterization technique. Next, the latent variable $\bm{z}_t$ is passed through a multi-layer perceptron (MLP) with residual connections, mapping it to the mel-spectrogram space as $\bm{y}'_{t}$, where $t=0, 1, ..., T-1$.
+
+#### 3.2.3.Stop Prediction Layer and Post-Net
+
+> Since ***MELLE*** directly predicts continuous mel-spectrograms rather than discrete tokens, it cannot generate an <EOS> token to indicate the end of generation. Instead, we use a linear layer as a binary classifier, taking $\bm{e}_t$ to determine if the generation should conclude, as depicted in Figure \ref{fig:modules} (mid).
+> Following previous neural TTS models \citep{wang2017tacotron, shen2018tacotron2}, we employ multiple convolutional blocks as the post-net to produce a residual that is added to $\bm{y}'=\{\bm{y}'_{0}, \bm{y}'_{1}, ..., \bm{y}'_{T-1}\}$, resulting in the refined mel-spectrogram $\bm{y}''=\{\bm{y}''_{0}, \bm{y}''_{1}, ..., \bm{y}''_{T-1}\}$, as shown in Figure \ref{fig:modules} (right). 
+> During training, the model is trained using teacher-forcing; while during inference, post-net processes $\bm{y}'$ after the AR generation concludes.
+
+### 3.3.Training Objective
+
+> The training process of ***MELLE*** is efficient and straightforward, due to the absence of \mbox{VALL-E}'s complex hierarchical structure. As illustrated in Figure \ref{fig:overview}, during training, a single end-to-end autoregressive model is optimized with the teacher-forcing manner using four loss functions: (1) a regression loss; (2) a Kullback-Leibler (KL) divergence loss; (3) a novel spectrogram flux loss; and (4) a binary cross entropy (BCE) loss for stop prediction. They work collaboratively to enhance overall performance:
+
+$$
+\begin{aligned}
+\mathcal{L} = \mathcal{L}_{\text{reg}} + \lambda \mathcal{L}_{\text{KL}} + \beta\mathcal{L}_{\text{flux}} + \gamma \mathcal{L}_{\text{stop}}
+\end{aligned}
+$$
+
+#### Regression Loss
+
+> The regression loss is a fundamental component of the training objective, ensuring the accurate prediction of mel-spectrogram frames, like conventional TTS \citep{li2019transformertts}. The regression loss, \(\mathcal{L}_{\text{reg}}\), is composed of a combination of L1 and L2 losses, applied to both intermediate prediction $\bm{y}'$ and final prediction $\bm{y}''$ of the mel-spectrogram. It is defined as follows:
+
+$$
+\begin{aligned}
+\mathcal{L}_{\text{reg}}(\bm{y}, \bm{y}', \bm{y}'')
+   &= \mathcal{L}_{\text{L1}}(\bm{y}, \bm{y}') + \mathcal{L}_{\text{L2}}(\bm{y}, \bm{y}') + \mathcal{L}_{\text{L1}}(\bm{y}, \bm{y}'') + \mathcal{L}_{\text{L2}}(\bm{y}, \bm{y}'') \notag \\
+   &= \|\bm{y} - \bm{y}'\|_1 + \|\bm{y} - \bm{y}'\|_2^2 + \|\bm{y} - \bm{y}''\|_1 + \|\bm{y} - \bm{y}''\|_2^2
+\end{aligned}
+$$
+
+> where $\bm{y}$ represents the ground-truth mel-spectrogram target.
+
+#### KL Divergence Loss
+
+> We introduce a Kullback-Leibler (KL) divergence loss based on the concept of variational inference \citep{kingma2014vae, blei2017vi_review}, to enhance the diversity and stability of ***MELLE***.
+> The KL divergence measures the difference between the predicted latent distribution \( p_\theta(\bm{z}_t \mid \bm{e}_t) \) and a simpler distribution \( p(\bm{z}_t) \). Unlike \cite{kingma2014vae}, which selects \( p(\bm{z}_t) \) as a standard normal distribution, we let \(\bm{z}_t\) possess the same dimensionality as the mel-spectrogram and define \( p(\bm{z}_t) \) as \(\mathcal{N}(\bm{y}_t, \bm{I})\). 
+> This can be seen as a shortcut on the optimization path thus accelerates the model's learning.
+> Combining equation (\ref{eq:gaussian}), the KL divergence loss among $T$ time steps can be analytically computed as
+
+$$
+\begin{aligned}
+\mathcal{L}_\text{KL}(\bm{y}, \bm{z}) &= \sum_{t=0}^{T-1} D_{\text{KL}}(p_\theta(\bm{z}_t \mid \bm{e}_t) \parallel p(\bm{z}_t)) \notag\\
+&=\frac{1}{2} \sum_{t=0}^{T-1} \sum_{i=1}^d \left( \bm{\sigma}_t^2[i] + (\bm{\mu}_t[i]-\bm{y}_t[i])^2 - 1 - \log\bm{\sigma}_t^2[i] \right) 
+\end{aligned}
+$$
+
+> where \( d \) is the dimensionality of the feature space. The detailed derivation is provided in Appendix \ref{appendix:derivation}. By integrating the KL divergence into the loss function, ***MELLE*** achieves a balance between reconstruction quality and latent space regularization, ultimately contributing to enhanced expressive diversity and robustness of the generated mel-spectrograms. 
+
+#### The Spectrogram Flux Loss
+
+> To encourage the dynamic variation of the generated mel-spectrogram frames, we propose a novel spectrogram flux loss as a regularization term. This loss function penalizes low variability between consecutive frames, thereby promoting changes and preventing the generation of overly static mel-spectrograms:
+
+$$
+\begin{aligned}
+\mathcal{L}_{\text{flux}}(\bm{y}, \bm{\mu}) = - \sum_{t=1}^{T-1} \|\bm{\mu}_t - \bm{y}_{t-1}\|_1
+\end{aligned}
+$$
+
+> where the L1 norm is employed to measure the difference between the predicted Gaussian mean vector $\bm{\mu}_t$ and the previous ground truth frame $\bm{y}_{t-1}$. By summing the negative value of the differences, the loss function rewards variations between frames, and the model is encouraged to reduces the generation of overly static frames that leading to repetition or endless silence in synthesized audio. 
+>
+> Additionally, by penalizing flat predictions, the model is incentivized to produce more diverse and dynamic frame sequences, thereby preventing monotonic and unnatural speech.
+
+#### Stop Prediction Loss
+
+> We use a linear layer to project the output of the LM to a logit and calculate the BCE loss, $\mathcal{L}_{\text{stop}}$, for stop prediction, like TransformerTTS \citep{li2019transformertts} and SpeechT5 \citep{ao2021speecht5}. 
+> During this calculation, positive and negative frames are extremely imbalanced, as each utterance has only one positive frame indicating "stop." To address this, we impose a larger weight (100) for the positive frames in the BCE loss.
+
+### 3.4.Inference: In-Context Learning for Mel-Spectrogram
+
+> During inference, we perform zero-shot text-to-speech by autoregressively predicting the mel-spectrogram. 
+> Given the text content $\bm{x}$ for synthesis, and a piece of speech prompt (with text transcription $\tilde{\bm{x}}$ and mel-spectrogram $\tilde{\bm{y}}$), at each time step \( t \), ***MELLE*** generates the next-frame mel-spectrogram \( \bm{y}_t' \) from a latent embedding \( \bm{z}_t \), which is sampled from a distribution conditioned on the concatenation of $\tilde{\bm{x}}$, $\bm{x}$, $\tilde{\bm{y}}$, and $\bm{y}_{<t}$.
+> After the AR generation process concludes, the coarse mel-spectrogram \( \bm{y}' \) passes through the post-net to obtain the refined spectrogram \( \bm{y}'' \), which is then converted to speech audio using an off-the-shelf vocoder.
+> If the reduction factor $r$ is set, the input and predicted mel-spectrograms will be grouped by that factor. 
+>
+> In contrast to neural codec language models (e.g., VALL-E) that rely on multi-stage iterative predictions across multi-layer codec codes and require the manual configuration of sampling parameters, ***MELLE*** accomplishes speech synthesis in a single forward pass and automatically samples from learned distributions that are unique to each input. 
+> This automated approach ensures adaptive and consistent sampling, reduces human effort, and makes the method domain-independent.
+> With the strong in-context learning capability from LLM, ***MELLE*** is capable of generating high-fidelity, natural-sounding speech for unseen speakers without fine-tuning. 
 
 ## 4.Experiments: 实验
 
