--- a/Models/Diffusion/2023.04.18_NaturalSpeech2.md
+++ b/Models/Diffusion/2023.04.18_NaturalSpeech2.md
@@ -76,7 +76,7 @@
 > Current large-scale TTS systems ([VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md); [SPEAR-TTS](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md); [FoundationTTS](../../Models/Speech_LLM/2023.03.06_FoundationTTS.md)) usually quantize the continuous speech waveform into discrete tokens and model these tokens with autoregressive language models.
 > This pipeline suffers from several limitations: 
 > 1. The speech (discrete token) sequence is usually very long (a 10s speech usually has thousands of discrete tokens) and the autoregressive models suffer from error propagation and thus unstable speech outputs. 
-> 2. There is a dilemma between the codec and language model: on the one hand, the codec with token quantization ([VQ-VAE](../../Models/_Basis/2017.11.02_VQ-VAE.md); [VQ-VAE-2](../../Models/_Basis/VQ-VAE-2.md) or [VQ-GAN](../../Models/_Basis/2020.12.17_VQGAN.md)) usually has a low bitrate token sequence, which, although eases the language model generation, incurs information loss on the high-frequency fine-grained acoustic details; 
+> 2. There is a dilemma between the codec and language model: on the one hand, the codec with token quantization ([VQ-VAE](../../Modules/VQ/2017.11.02_VQ-VAE.md); [VQ-VAE-2](../../Modules/VQ/VQ-VAE-2.md) or [VQ-GAN](../../Models/_Basis/2020.12.17_VQGAN.md)) usually has a low bitrate token sequence, which, although eases the language model generation, incurs information loss on the high-frequency fine-grained acoustic details; 
 > on the other hand, some improving methods ([SoundStream](../../Models/Speech_Neural_Codec/2021.07.07_SoundStream.md); [EnCodec](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md)) use multiple residual discrete tokens to represent a speech frame, which increases the length of the token sequence multiple times if flattened and incurs difficulty in language modeling.
 
 > In this paper, we propose ***NaturalSpeech2***, a TTS system with latent diffusion models to achieve expressive prosody, good robustness, and most importantly strong zero-shot ability for speech synthesis.
@@ -116,7 +116,7 @@
 > Thus, some recent works ([VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md); [SPEAR-TTS](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md); [FoundationTTS](../../Models/Speech_LLM/2023.03.06_FoundationTTS.md)) attempt to scale the TTS systems to large-scale, multi-speaker, and in-the-wild datasets to pursue diversity.
 
 > These systems usually leverage a neural codec to convert speech waveform into discrete token sequence and an autoregressive language model to generate discrete tokens from text, which suffers from a dilemma as shown in Table.02: 
-> 1. If the audio codec quantizes each speech frame into a single token with vector-quantizer (VQ) ([VQ-VAE](../../Models/_Basis/2017.11.02_VQ-VAE.md); [VQ-VAE-2](../../Models/_Basis/VQ-VAE-2.md); [VQ-GAN](../../Models/_Basis/2020.12.17_VQGAN.md)), this could ease the token generation in the language model due to short sequence length, but will affect the waveform reconstruction quality due to large compression rate or low bitrate. 
+> 1. If the audio codec quantizes each speech frame into a single token with vector-quantizer (VQ) ([VQ-VAE](../../Modules/VQ/2017.11.02_VQ-VAE.md); [VQ-VAE-2](../../Modules/VQ/VQ-VAE-2.md); [VQ-GAN](../../Models/_Basis/2020.12.17_VQGAN.md)), this could ease the token generation in the language model due to short sequence length, but will affect the waveform reconstruction quality due to large compression rate or low bitrate. 
 > 2. If the audio codec quantizes each speech frame into multiple tokens with residual vector-quantizer (RVQ) ([SoundStream](../../Models/Speech_Neural_Codec/2021.07.07_SoundStream.md); [EnCodec](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md)), this will ensure high-fidelity waveform reconstruction, but will cause difficulty in autoregressive model generation (error propagation and robust issues) due to the increased length in the token sequence.
 > 
 > Thus, previous works such as [AudioLM](../../Models/Speech_LLM/2022.09.07_AudioLM.md) leverage two-stage language models to first generate some coarse-grained tokens in each frame and then generate the remaining fine-grained tokens, which are complicated and incur cascaded errors.
