--- a/Models/Speech_Neural_Codec/2022.10.24_EnCodec.md
+++ b/Models/Speech_Neural_Codec/2022.10.24_EnCodec.md
@@ -5,30 +5,35 @@
 
 - 标题: High Fidelity Neural Audio Compression
 - 作者:
-  - [Alexandre Défossez](../../Authors/Alexandre_Défossez.md)
-  - [Jade Copet](../../Authors/Jade_Copet.md)
-  - [Gabriel Synnaeve](../../Authors/Gabriel_Synnaeve.md)
-  - [Yossi Adi](../../Authors/Yossi_Adi.md)
+  - 01 [Alexandre Défossez](../../Authors/Alexandre_Défossez.md)
+  - 02 [Jade Copet](../../Authors/Jade_Copet.md)
+  - 03 [Gabriel Synnaeve](../../Authors/Gabriel_Synnaeve.md)
+  - 04 [Yossi Adi](../../Authors/Yossi_Adi.md)
 - 机构:
   - [Meta AI](../../Institutions/Meta.AI.md)
 - 时间:
   - 预印时间: 2022.10.24 ArXiv v1
-  - 更新笔记: 2024.06.14
+  - 更新笔记: 2024.07.13
 - 发表:
-  - 期刊/会议 
+  - [TMLR](../../Publications/TMLR.md) 
 - 链接:
   - [ArXiv](https://arxiv.org/abs/2210.13438)
   - [DOI]()
   - [Github](https://github.com/facebookresearch/encodec)
   - [Demo]()
+  - [Scholar](https://scholar.google.com/scholar?cluster=11269141130994676820)
 - 标签:
   - [编解码器](../../Tags/Codec.md)
   - [开源](../../Tags/OpenSource.md)
 - 页数: 19
 - 引用: ?
-- 被引: 293 
-
-<!-- https://scholar.google.com/scholar?hl=zh-CN&as_sdt=0%2C5&q=High+Fidelity+Neural+Audio+Compression&btnG= -->
+- 被引: 347
+- 数据:
+  - ? 
+- 对比:
+  - ?
+- 复现:
+  - ?
 
 </details>
 
