--- a/Models/Speech_Neural_Codec/2024.06.11_Single-Codec.md
+++ b/Models/Speech_Neural_Codec/2024.06.11_Single-Codec.md
@@ -38,7 +38,7 @@
 - 数据:
   - ? 
 - 对比:
-  - [VQ-VAE](../../Models/_Basis/2017.11.02_VQ-VAE.md)
+  - [VQ-VAE](../../Modules/VQ/2017.11.02_VQ-VAE.md)
   - [EnCodec](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md)
   - [TiCodec](../../Models/Speech_Neural_Codec/TiCodec.md)
 - 复现:
@@ -49,7 +49,7 @@
 ## Abstract: 摘要
 
 > The multi-codebook speech codec enables the application of large language models (LLM) in TTS but bottlenecks efficiency and robustness due to multi-sequence prediction.
-> To avoid this obstacle, we propose ***Single-Codec***, a single-codebook single-sequence codec, which employs a disentangled [VQ-VAE](../_Basis/2017.11.02_VQ-VAE.md) to decouple speech into a time-invariant embedding and a phonetically-rich discrete sequence.
+> To avoid this obstacle, we propose ***Single-Codec***, a single-codebook single-sequence codec, which employs a disentangled [VQ-VAE](../../Modules/VQ/2017.11.02_VQ-VAE.md) to decouple speech into a time-invariant embedding and a phonetically-rich discrete sequence.
 > Furthermore, the encoder is enhanced with (1) contextual modeling with a BLSTM module to exploit the temporal information, (2) a hybrid sampling module to alleviate distortion from upsampling and downsampling, and (3) a resampling module to encourage discrete units to carry more phonetic information.
 > Compared with multi-codebook codecs, e.g., [EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md) and [TiCodec](../Speech_Neural_Codec/TiCodec.md), SingleCodec demonstrates higher reconstruction quality with a lower bandwidth of only 304bps.
 > The effectiveness of Single-Code is further validated by LLM-TTS experiments, showing improved naturalness and intelligibility.
@@ -94,7 +94,7 @@ None
 ![](Images/2024.06.11_Single-Codec_Fig.01.png)
 
 > The architecture of ***Single-Codec*** is shown in [Figure.01](Images/2024.06.11_Single-Codec_Fig.01.png).
-> It is built on [Vector Quantized-Variational AutoEncoder (VQ-VAE)](../_Basis/2017.11.02_VQ-VAE.md) with Mel Spectrogram input and reconstruction, similar to [Tortoise-TTS](../../Models/_tmp/2023.05.12_TorToise-TTS.md).
+> It is built on [Vector Quantized-Variational AutoEncoder (VQ-VAE)](../../Modules/VQ/2017.11.02_VQ-VAE.md) with Mel Spectrogram input and reconstruction, similar to [Tortoise-TTS](../../Models/_tmp/2023.05.12_TorToise-TTS.md).
 > We adopt a [Conformer](../../Models/_Basis/2020.05.16_Conformer.md)-based encoder to encode a Mel Spectrogram segment seg2 into a latent content representation c, which is then passed to the Vector Quantizer (VQ) for vector quantization.
 > The convolution-based decoder reconstructs the Mel Spectrogram ˜seg2 from the quantized content representation c.
 > Additionally, we apply a discriminator to improve generation quality ([VQGAN](../_Basis/2020.12.17_VQGAN.md)).
@@ -153,9 +153,9 @@ None
 
 > To verify the effectiveness of our designed modules in ***Single-Codec***, we conduct ablation studies on the following models. 
 
-> - [VQ-VAE](../_Basis/2017.11.02_VQ-VAE.md): A basic [VQ-VAE](../_Basis/2017.11.02_VQ-VAE.md) codec with a discriminator for perceptual loss, the structure and configuration of the [VQ-VAE](../_Basis/2017.11.02_VQ-VAE.md) codec is similar to that in [Tortoise-TTS](../../Models/_tmp/2023.05.12_TorToise-TTS.md).
-> - Ref-short: [VQ-VAE](../_Basis/2017.11.02_VQ-VAE.md) with a reference encoder that consumes a short segment with 200 frames as input.
-> - Ref-long: [VQ-VAE](../_Basis/2017.11.02_VQ-VAE.md) with a reference encoder that consumes a long segment with 600 frames as input.
+> - [VQ-VAE](../../Modules/VQ/2017.11.02_VQ-VAE.md): A basic [VQ-VAE](../../Modules/VQ/2017.11.02_VQ-VAE.md) codec with a discriminator for perceptual loss, the structure and configuration of the [VQ-VAE](../../Modules/VQ/2017.11.02_VQ-VAE.md) codec is similar to that in [Tortoise-TTS](../../Models/_tmp/2023.05.12_TorToise-TTS.md).
+> - Ref-short: [VQ-VAE](../../Modules/VQ/2017.11.02_VQ-VAE.md) with a reference encoder that consumes a short segment with 200 frames as input.
+> - Ref-long: [VQ-VAE](../../Modules/VQ/2017.11.02_VQ-VAE.md) with a reference encoder that consumes a long segment with 600 frames as input.
 > - Ref-BLSTM: Ref-long with the BLSTM module to verify the effectiveness of the BLSTM module.
 > - Ref-HybSam: Ref-long with the hybrid sampling module to verify the effectiveness of the hybrid sampling module.
 > - Ref-BLSTM-HybSam: Ref-long with the BLSTM and hybrid sampling modules to verify the effectiveness of the combination of BLSTM and hybrid sampling modules.
@@ -187,7 +187,7 @@ None
 > The test set is composed of 100 randomly selected sentences from unseen speakers.
 > The objective result is shown in Table 1.
 
-> Compared with [VQ-VAE](../_Basis/2017.11.02_VQ-VAE.md), either Ref-short or Ref-long obtains better performance on all metrics.
+> Compared with [VQ-VAE](../../Modules/VQ/2017.11.02_VQ-VAE.md), either Ref-short or Ref-long obtains better performance on all metrics.
 > It indicates that it is effective to decouple global information from speech for the single-codebook codec.
 > Moreover, Ref-long outperforms Ref-short in both reconstruction and speaker similarity, suggesting that longer reference segments help capture more accurate time-invariant information and enhance content modelling.
 > Ref-BLSTM, Ref-HybSam, and Ref-BLSTM-HybSam get higher reconstruction quality, showing the effectiveness of the BLSTM and hybrid sampling modules.
@@ -198,7 +198,7 @@ None
 > We further analyze the commitment loss in the training to explore the impact of different designed modules on the single-codebook codec.
 > Commitment loss is the difference between representations before and after quantization.
 > The degree of convergence of the commitment loss can reflect the relationship between the encoder output and the cluster center in the codebook.
-> As shown in Figure.02, the commitment loss of [VQ-VAE](../_Basis/2017.11.02_VQ-VAE.md) tends to diverge after model training, indicating that the entanglement of time-invariant global information and time-variant content information hinders forming a limited variety of content-related speech units.
+> As shown in Figure.02, the commitment loss of [VQ-VAE](../../Modules/VQ/2017.11.02_VQ-VAE.md) tends to diverge after model training, indicating that the entanglement of time-invariant global information and time-variant content information hinders forming a limited variety of content-related speech units.
 > After considering time-invariant decoupled modelling, the loss of Ref-short increases slowly, indicating the effectiveness of global information disentanglement for speech unit learning.
 > Ref-long further verifies this result, illustrating the effectiveness of a longer reference segment.
 > The loss curve of Ref-HybSam is flat, indicating that the hybrid sampling module effectively improves codec performance.
@@ -214,7 +214,7 @@ None
 
 > We compare the performance in speech reconstruction of the proposed ***Single-Codec*** with other codecs.
 > The results, as presented in Table 1, demonstrate that despite lower bandwidth, the proposed ***Single-Codec*** surpasses other codecs with 1 codebook and is on par with the [TiCodec](../Speech_Neural_Codec/TiCodec.md) with 2 codebooks in terms of reconstruction quality and speaker similarity.
-> [VQ-VAE](../_Basis/2017.11.02_VQ-VAE.md) performs better than [EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md) with 1 codebook, demonstrating the high quantization efficiency of codecs operated on Mel Spectrogram.
+> [VQ-VAE](../../Modules/VQ/2017.11.02_VQ-VAE.md) performs better than [EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md) with 1 codebook, demonstrating the high quantization efficiency of codecs operated on Mel Spectrogram.
 > Compared to [TiCodec](../Speech_Neural_Codec/TiCodec.md), which also quantized the decoupled time-invariant information, ***Single-Codec*** achieves higher speaker similarity and reconstruction quality, indicating the effectiveness of continuous time-invariant representations and longer reference length.
 
 ### 4.7.Zero-Shot TTS Evaluation: 零样本文本转语音评估
@@ -237,7 +237,7 @@ None
 ## 5.Conclusions: 结论
 
 > In this paper, we propose ***Single-Codec***, the first single-codebook codec dedicatedly designed for LLM-based speech generation.
-> ***Single-Codec*** employs a disentangled [VQ-VAE](../_Basis/2017.11.02_VQ-VAE.md) on Mel Spectrograms to decouple speech into time-invariant global embedding and one phonetically-rich discrete sequence quantized by one codebook.
+> ***Single-Codec*** employs a disentangled [VQ-VAE](../../Modules/VQ/2017.11.02_VQ-VAE.md) on Mel Spectrograms to decouple speech into time-invariant global embedding and one phonetically-rich discrete sequence quantized by one codebook.
 > Furthermore, the encoder is enhanced with a BLSTM module for contextual modelling, a hybrid sampling module to alleviate distortion from upsampling and downsampling, and a resampling module to encourage discrete units to carry more phonetic-relevant information with lower short-time variance.
 > In experiments, compared with multi-codebook codecs, e.g. [EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md) and [TiCodec](../Speech_Neural_Codec/TiCodec.md), ***Single-Codec*** demonstrates higher speech reconstruction quality with lower bandwidth of only 304bps, and enables a higher-quality LLM-TTS with better naturalness and intelligibility.
 > In the future, we will focus on developing a more efficient single-codebook codec for speech reconstruction and speech synthesis.
