--- a/Models/Singing_Voice/2024.06.12_TokSing.md
+++ b/Models/Singing_Voice/2024.06.12_TokSing.md
@@ -155,7 +155,7 @@
 <summary>原文</summary>
 
 > There are typically two ways to formulate discrete tokens.
-> One way is to use a [Variational Quantized Variational Autoencoder (VQ-VAE)](../_Basis/2017.11.02_VQ-VAE.md) to derive discrete representations from raw audio. 
+> One way is to use a [Variational Quantized Variational Autoencoder (VQ-VAE)](../../Modules/VQ/2017.11.02_VQ-VAE.md) to derive discrete representations from raw audio. 
 > [SoundStream](../../Models/Speech_Neural_Codec/2021.07.07_SoundStream.md) introduces a residual vector quantizer (RVQ) and can reconstruct audios from multi-layer Codec tokens with Codec decoder.
 > The other way involves quantizing tokens through clustering the hidden embeddings of SSL models.
 > The pre-training task and the corpus of these models directly influence token generation.
@@ -166,7 +166,7 @@
 <br>
 
 通常有两种方法来构成离散标识符.
-一种方法是使用[变分量化变分自编码器 (VQ-VAE) ](../_Basis/2017.11.02_VQ-VAE.md)从原始音频中提取离散表示.
+一种方法是使用[变分量化变分自编码器 (VQ-VAE) ](../../Modules/VQ/2017.11.02_VQ-VAE.md)从原始音频中提取离散表示.
 [SoundStream](../../Models/Speech_Neural_Codec/2021.07.07_SoundStream.md)引入了残差向量量化器 (RVQ) , 并能够从多层编解码器标识符中通过编解码器解码器重建音频.
 另一种方法涉及通过聚类SSL模型的隐藏嵌入来量化标识符.
 这些模型的预训练任务和语料库直接影响标识符的生成.
