--- a/Models/Speech_LLM/2024.06.28_BESTOW.md
+++ b/Models/Speech_LLM/2024.06.28_BESTOW.md
@@ -187,7 +187,7 @@
 > This can be done by two approaches: i) keep the bidirectional encoder in the inference time, recompute all the available encoder states after getting each new speech block, and provide that to the above read-write policy (denoted as {\em BESTOW-S-bidi}) ii) retrain the model with a unidirectional encoder (denoted as {\em BESTOW-S-unid}). 
 > For the former, we introduce a fixed right context of 13 frames in the inference time to compensate the training/inference mismatch.
 > For the latter, we adapt the cache aware streaming model\cite{noroozi2023stateful} to update the FastConformer pre-encoder layers.
-> We utilize causal convolutions with the following left and right context windows in frames: [[70,13],[70,6],[70,1],[70,0]], which can be chosen from in the inference time.
+> We utilize causal convolutions with the following left and right context windows in frames: `[[70,13],[70,6],[70,1],[70,0]]`, which can be chosen from in the inference time.
 >
 > We initialize the streamable SpeechLLM ({\em BESTOW-S}) from the offline SpeechLLM ({\em BESTOW}) and continue training on the same data.
 > To improve the generalization, we train BESTOW-S with a random $K$ range so that in inference, any $K$ in the range can be used to allow latency-quality tradeoff.
