--- a/Models/Speech_LLM/2024.04.03_CLaM-TTS.md
+++ b/Models/Speech_LLM/2024.04.03_CLaM-TTS.md
@@ -115,7 +115,7 @@
 
 ### 3.1. Residual Quantized Variational Autoencoder (RQ-VAE) 
 
-> An [RQ-VAE (2022)](../_Basis/2022.03.03_RQ-VAE.md) is a neural network architecture representing data as discrete codes using residual vector quantization. 
+> An [RQ-VAE (2022)](../../Modules/VQ/2022.03.03_RQ-VAE.md) is a neural network architecture representing data as discrete codes using residual vector quantization. 
 > It comprises of three components: 
 > (1) an encoder parameterized by $\phi$ that maps data $\pmb{y}$ into a sequence of latent representations $\pmb{z}_{1:T}$; 
 > (2) a residual vector quantizer $RQ_\psi(\cdot)$, converting the latent vector $\pmb{z}_t$ at each time $t$ into the discrete code representation $\pmb{c}_{t,1:D}=RQ_\psi(\pmb{z}_t)$, or the corresponding quantized embedding $\hat{\pmb{z}}_t$;
